# goit-ds-hw-03

./: authors.json  main.py  pyproject.toml
